minor payslip formatting

--- a/src/components/Payslip/payslip.css
+++ b/src/components/Payslip/payslip.css
@@ -12,6 +12,10 @@
     text-align: right;
 }
 
+.ant-descriptions-item-label.userinfo {
+    width: 20%;
+}
+
 .ant-descriptions-item-label.alignright {
     width: 40%;
 }
