--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  /* make sure it is at least as tall as the viewport */
+  position: relative;
+  overflow: hidden;
+}
+
 body {
+  min-height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,5 +24,7 @@ code {
 }
 
 #root {
+  min-height: 100%;
   overflow: hidden;
 }
+
