wip welfare styling

--- a/src/components/Welfare/welfare.css
+++ b/src/components/Welfare/welfare.css
@@ -1,3 +1,5 @@
+
+
 .welfareformh {
     height: 67vh;
 }
@@ -14,46 +16,72 @@
     margin-top: -12px !important;
 }
 
-.ant-radio-inner, .ant-radio-inner:after{
-    display: none;
-  }
-  .ant-radio-inner:after{
-    display: none;
-  }
 
-  #monday-blue .ant-radio-input:before{
-    content: icon;
-  }
-
-/* .ant-card-head{
-    background-color: rgb(54, 206, 233) !important;
+.ant-radio-button-wrapper:first-child:last-child{
+  border-radius: 10px;
+  height: 100%;
+  width: auto;
+  margin: 5px;
+  padding: 0%;
+  align-items: center;
+  background-color:rgb(218, 225, 232);
+  
 }
-.ant-card-body{
-    background-color: rgb(148, 165, 158) !important;
+.ant-radio-button-wrapper-checked:not([class*=' ant-radio-button-wrapper-disabled']).ant-radio-button-wrapper:first-child{
+  /* background-color:rgb(135, 196, 253); */
+  /* background-color:rgb(79, 110, 182); */
+  border-color: rgb(100, 148, 252);
+  border-right-color: rgba(100, 148, 252);
+  border-width: 0px;
+  /* background-image: linear-gradient(to bottom right, rgb(194, 37, 37), yellow); */
+  background: linear-gradient(0deg, rgba(244,197,41,1) 2%, rgba(97,232,192,1) 68%);
+  
+
+}
+
+.ant-radio-button-wrapper-checked:not([class*=' ant-radio-button-wrapper-disabled']).ant-radio-button-wrapper:first-child{
+  border-right-color: rgba(105, 217, 187, 0.65);
+}
+/* 
+  .ant-radio-button-wrapper-checked:not([class*=' ant-radio-button-wrapper-disabled']).ant-radio-button-wrapper:first-child{
+   
+  }
+   */
+
+   /* #mondays-blue .ant-card {
+    border: 1px solid #f0f0f0;
+    border-radius: 10px;
+    background: transparent !important;
+} */
+
+   /* #mondays-blue .ant-card-bordered {
+    border: 1px solid #f0f0f0;
+    border-radius: 10px;
 } */
 
 #mondays-blue .ant-card-head {
-    background-color: rgba(178, 224, 255, 0.65);
+    background-color: rgba(178, 224, 255, 1);
   }
 
   #mondays-blue .ant-card-body {
-    background-color: rgba(229, 229, 229, 0.65);
+    background-color: rgba(218, 225, 232, 0.65);
   }
 
+
   #wozzy-wednesday .ant-card-head {
-    background-color: rgba(206, 255, 160, 0.65);
+    background-color: rgb(105, 217, 183);
   }
 
   #wozzy-wednesday .ant-card-body {
-    background-color: rgba(229, 229, 229, 0.65);
+    background-color: rgba(218, 225, 232, 0.65);
   }
 
   #tgif .ant-card-head {
-    background-color: rgba(116,82, 53,0.48);
+    background-color: rgb(224,197, 41);
   }
 
   #tgif .ant-card-body {
-    background-color: rgba(229, 229, 229, 0.65);
+    background-color: rgba(218, 225, 232, 0.65);
   }
   
   #mondays-blue:focus-within {
