--- a/frontend/src/components/Welfare/welfare.css
+++ b/frontend/src/components/Welfare/welfare.css
@@ -95,3 +95,8 @@
     border: 1px solid;
     box-shadow: 5px 10px 18px #888888;
   }
+
+  .formbuttons{
+    background: linear-gradient(0deg, rgba(41,192,244,0.9920343137254902) 0%, rgba(44,172,248,1) 22%, rgba(49,133,255,1) 56%, rgba(43,181,246,1) 92%);
+
+  }
